fixed section a margin on smaller screens

--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ a.in-touch{
 .meeting3{
     max-width: 80%;
     max-height: 80%;
-    display: none;
+
     border-radius: 10px;
 }
 section.E{
@@ -874,6 +874,21 @@ footer{
         .policy-details{
             line-height: 20px;
         }
+        .priacy-section{
+            padding-left: 5vw;
+            padding-right: 5vw;   
+            background-color: blue;
+            color: white;
+                
+        }
+        .our-privacy-policy{
+            padding-left: 5vw;
+            padding-right: 5vw;  
+
+        }
+        .bullet{margin-right: 10px;
+
+        }
       /*end of policy page*/
 
 
@@ -993,25 +1008,35 @@ footer{
 }
 .mud2{
     text-align: center;
-
 }
 }
 
 @media screen and (max-width: 991px) {
-    section.A{
-    
-       
+    section.A{ 
         height: auto;
-        padding-top: 40px;
-        padding-left: 6vw;
-        padding-right: 6vw;
+        padding-top: 0px;
+        padding-left: 0vw;
+        padding-right: 0vw;
     }
+    header{
+        margin-bottom: 30px;
+        z-index: 1000;   
+    } 
     .collapse{
         padding-left: 0px;
         padding-right: 0px;  
     }
     .navbar-brand{
         padding-left: 0px;
+    }
+    .navbar{
+    background-color: rgb(255, 255, 255);
+    box-shadow: 3px 4px 36px -17px rgba(0, 0, 0, 0.25);
+    border-radius: 0px;
+    z-index: 1000;
+    }
+    .model1{
+        display: none;
     }
     .talk{   
         color: white;
@@ -1033,11 +1058,7 @@ footer{
         
         line-height: 70px;
     }
-    section.A{
-    
-       
-        padding-bottom: 70px;
-    }
+   
     
 
 }
